--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
 .App {
-  /* text-align: center; */
-  /* display: flex; */
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 .uploadExcel{
@@ -40,8 +39,8 @@
 .main-container {
   padding: 75px 0 0 0;
   overflow: 'scroll';
-  width: 80%;
-  
+  width: 100%;
+  margin:0 35px;
 }
 
 
