--- a/src/component/MainContainer/mainContainer.scss
+++ b/src/component/MainContainer/mainContainer.scss
@@ -15,3 +15,22 @@
 .inputCon button{
     margin-left: 15px;
 }
+
+.cardstyle{
+    display: flex;
+    justify-content: center;
+}
+
+
+.positionHandle{
+    
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    position: absolute;
+}
+
