--- a/src/component/DetailContent/DetailContent.scss
+++ b/src/component/DetailContent/DetailContent.scss
@@ -1,37 +1,218 @@
-.positionAndStyleActive{
-  transition: .3s;
-  left:25%;
-  width: 500px;
-  height: 500px; 
-}
-
 
 
 .positionAndStyle { 
+    font-family: Microsoft JhengHei;
+
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+
     transition: .3s;
     position: fixed;
+    top:8%;
+    margin: 0 auto;
+    width: 550px;
+    min-height: 700px;
+    height: 50vw;
 
-    top:15%;
-    // left:0;
-    width: 500px;
-    height: 500px;   
-
- 
     background: black;
-    z-index: 90 !important;
-    border-radius: 25px;
+    z-index: 9999 !important;
+    transform-origin: center;
 
-    
+    visibility: hidden;
+    transform: scale(0);
 
-  .mainContainer {
-    margin: 15px;
-    display: flex;
-    justify-content: center;
-
-    h1 {
-        word-wrap: break-word;
-        color:white
+    &.active{
+      display: flex;
+      transition: .3s;
+      visibility: visible;
+      transform: scale(1);
     }
 
+    
+    .closeButton{
+      color: rgb(243, 20, 20);
+      position: absolute;
+      top:2%;
+      left:96%;
+      cursor: pointer;
+      z-index: 10000 !important;
+    }
+
+
+    .noticeLogo{
+      position: relative;
+      width: 225px;
+      height: 50px;
+      background: red;
+      color: white;
+
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      transform-origin: center;
+      transform: rotate(-45deg);
+      left: -35px;
+      top: 20px;
+      z-index:10001;
+      overflow: hidden;
+    }
+
+
+  .firstLayer{
+    width: 100%;
+    display: flex;
+    height: 5%;
+    color:rgb(4,0,66);
+    background-color: white;
+
+    .left{
+      width: 70%;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      margin-right: 5px;
+
+      .leftUp, .leftBottom{
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+
+      }
+
+
+      .leftUp{
+        height: 60%;
+        .customeHotLine{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          font-size: 12px;
+          text-align: justify;
+          position: relative;
+          top: 25%;
+          margin-right: 5px;
+          
+          div{
+            // width: -webkit-fill-available;
+          }
+          div:nth-child(2){
+            font-size: 6px;
+          }
+        }
+
+        .number{
+          display: flex;
+          font-size: 19px;
+        }
+      }
+
+
+
+
+      .leftBottom{
+        height: 40%;
+        font-size: 10px;
+
+
+
+        .redLine{
+          content: '';
+          width: 80%;
+          background: red;
+          height: 2px;
+          position: relative;
+          top: 70%;
+        }
+      }
+    }
+    .right{
+      width: 30%;
+      height:100%;
+      display: flex;
+      justify-content: center;
+      .kmbLogo{
+        position: relative;
+        width: 100%;
+        
+      }
+    }
+
+    
+  
   }
+
+
+
+  .secondLayer{
+    width: 100%;
+    height: 35%;
+    background: #fecccb;
+    .mainContainer {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+  
+      .font {
+        word-wrap: break-word;
+        color:black;
+        font-size:70px;
+      }
+      .font2 {
+        word-wrap: break-word;
+        color:black;
+        font-size:50px;
+      }
+
+      .font3{
+        word-wrap: break-word;
+        color:black;
+        font-size:25px;
+      }
+
+    }
+  }
+
+
+  .thirdLayer{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 60%;
+
+
+    .raw{
+      display: flex;
+      width: 100%;
+      height: 100%;
+      border-bottom: 0.5px solid black;
+      .left{
+        width: 30%;
+        background: #cdffcc;
+        font-size: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        div:nth-child(2){
+          font-size: 12px;
+        }
+      }
+      .right{
+        width: 70%;
+        background: white;
+      }
+    }
+  }
+
+
+    
+    
+
+  
 }
