--- a/src/component/KmbLogo/kmbLogo.scss
+++ b/src/component/KmbLogo/kmbLogo.scss
@@ -9,3 +9,19 @@
     align-items: center;
     font-weight: 900;
   }
+
+  .kmbBusLogo{
+    width: 1rem;
+    height:1rem;
+    content:url(https://t6.rbxcdn.com/41f3702acfff23d966b3f4d8a1121203);
+  }
+
+  
+  .rectangle{
+    width: 2rem;
+    height: 1rem;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
