--- a/src/component/DetailContent/DetailContent.scss
+++ b/src/component/DetailContent/DetailContent.scss
@@ -14,8 +14,8 @@
     width: 550px;
     min-height: 700px;
     height: 50vw;
+    border:0.5px solid black;
 
-    background: black;
     z-index: 9999 !important;
     transform-origin: center;
 
@@ -191,6 +191,7 @@
       width: 100%;
       height: 100%;
       border-bottom: 0.5px solid black;
+
       .left{
         width: 30%;
         background: #cdffcc;
@@ -206,6 +207,9 @@
       .right{
         width: 70%;
         background: white;
+        font-size:25px;
+        display: flex;
+        align-items: center;
       }
     }
   }
