--- a/src/component/DetailContent/DetailContent.scss
+++ b/src/component/DetailContent/DetailContent.scss
@@ -1,273 +1,297 @@
-.containerDetailContent{
+.containerDetailContent {
   font-family: Microsoft JhengHei;
 
-    display:flex;
-    flex-direction: column;
+  transition: 0.3s;
+  position: fixed;
+  top: 8%;
+  margin: 0 auto;
+  min-width: 300px;
+  max-width: 550px;
+  width: 80vw;
+  min-height: 600px;
+  height: 80vh;
+
+  border: 0.5px solid black;
+
+  z-index: 9999 !important;
+  transform-origin: center;
+  border: 0.5px solid black;
+
+  visibility: hidden;
+  transform: scale(0);
+
+  &.active {
+    display: flex;
+    transition: 0.3s;
+    visibility: visible;
+    transform: scale(1);
+  }
+
+  .closeCon {
+    visibility: visible;
+    transition: 0.2s;
+    position: absolute;
+    top: -2%;
+    left: 98%;
+    width: 20px;
+    height: 20px;
+    background: black;
+    border-radius: 50%;
+    border: 0.2px solid black;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    z-index: 10000 !important;
 
-    transition: .3s;
-    position: fixed;
-    top:8%;
-    margin: 0 auto;
-    width: 550px;
-    min-height: 700px;
-    height: 50vw;
-    border:0.5px solid black;
-
-    z-index: 9999 !important;
-    transform-origin: center;
-    border: 0.5px solid black;
-
-    visibility: hidden;
-    transform: scale(0);
-
-
-
-    &.active{
-      display: flex;
-      transition: .3s;
-      visibility: visible;
-      transform: scale(1);
+    &:hover {
+      transition: 0.2s;
+      transform: scale(1.5);
     }
 
-    .closeCon{
-      transition: .2s;
-      position: absolute;
-      top:-2%;
-      left:98%;
-      width: 20px;
-      height: 20px;
-      background: black;
-      border-radius: 50%;
-      border: 0.2px solid black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .closeButton {
+      color: white;
+
+      cursor: pointer;
       z-index: 10000 !important;
-      
-
-      &:hover{
-        transition: .2s;
-        transform: scale(1.5);
-      }
-
-      .closeButton{
-        color: white;
-        
-        cursor: pointer;
-        z-index: 10000 !important;
-      }
     }
-    
+  }
 
-
-
-.positionAndStyle { 
-   
+  .positionAndStyle {
     width: 100%;
     height: 100%;
     overflow: hidden;
-
-    
-
-  .firstLayer{
-    width: 100%;
+    position: relative;
     display: flex;
-    height: 5%;
-    color:rgb(4,0,66);
-    background-color: white;
+    flex-direction: column;
+    align-items: center;
 
-
-
-
-    .noticeLogo{
-      position: relative;
-      width: 250px;
-      height: 50px;
-      background: red;
-      color: white;
+    .firstLayer {
+      width: 100%;
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      transform-origin: center;
-      transform: rotate(-45deg);
-      left: -43px;
-      top: 15px;
-      z-index: 10001;
-    }
+      height: 5%;
+      color: rgb(4, 0, 66);
+      background-color: white;
 
-
-
-
-
-
-    .left{
-      width: 75%;
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      margin-right: 5px;
-
-      .leftUp, .leftBottom{
-        width: 100%;
+      .noticeLogo {
+        position: absolute;
+        width: 250px;
+        height: 50px;
+        background: red;
+        color: white;
         display: flex;
-        justify-content: flex-end;
-
+        flex-direction: column;
+        align-items: center;
+        transform-origin: center;
+        transform: rotate(-45deg);
+        left: -82px;
+        top: 15px;
+        z-index: 10001;
       }
 
+      .left {
+        width: 75%;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        margin-right: 5px;
 
-      .leftUp{
-        height: 60%;
-        .customeHotLine{
+        .leftUp,
+        .leftBottom {
+          width: 100%;
+          display: flex;
+          justify-content: flex-end;
+        }
+
+        .leftUp {
+          height: 60%;
+          .customeHotLine {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 12px;
+            text-align: justify;
+            position: relative;
+            top: 25%;
+            margin-right: 5px;
+
+            div {
+              // width: -webkit-fill-available;
+            }
+            div:nth-child(2) {
+              font-size: 6px;
+            }
+          }
+
+          .number {
+            display: flex;
+            font-size: 19px;
+          }
+        }
+
+        .leftBottom {
+          height: 40%;
+          font-size: 10px;
+
+          .redLine {
+            content: "";
+            width: 80%;
+            background: red;
+            height: 2px;
+            position: relative;
+            top: 70%;
+          }
+        }
+      }
+      .right {
+        width: 25%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        .kmbLogo {
+          position: relative;
+          width: 100%;
+        }
+      }
+    }
+
+    .secondLayer {
+      width: 100%;
+      height: 35%;
+      background: #fecccb;
+
+      button {
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      .mainContainer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        // .editButton{
+        //   position: absolute;
+        //   top: 35px;
+        //   right: 0;
+        //   cursor: pointer;
+        // }
+
+        .font {
+          word-wrap: break-word;
+          color: black;
+          font-size: 70px;
+        }
+        .font2 {
+          word-wrap: break-word;
+          color: black;
+          font-size: 50px;
+        }
+
+        .font3 {
+          word-wrap: break-word;
+          color: black;
+          font-size: 25px;
+        }
+      }
+    }
+
+    .thirdLayer {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 60%;
+
+      .raw {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        border-bottom: 0.5px solid black;
+
+        .left {
+          width: 30%;
+          background: #cdffcc;
+          font-size: 20px;
           display: flex;
           flex-direction: column;
           justify-content: center;
-          align-items: center;
-          font-size: 12px;
-          text-align: justify;
-          position: relative;
-          top: 25%;
-          margin-right: 5px;
-          
-          div{
-            // width: -webkit-fill-available;
-          }
-          div:nth-child(2){
-            font-size: 6px;
+
+          div:nth-child(2) {
+            font-size: 12px;
           }
         }
-
-        .number{
+        .right {
+          width: 70%;
+          background: white;
           display: flex;
-          font-size: 19px;
+          flex-direction: column;
+          justify-content: center;
+          font-size: 20px;
+
+          a {
+            font-size: 15px;
+          }
+
+          // .dateTime{
+          //   font-size:20px;
+          // }
         }
-      }
-
-
-
-
-      .leftBottom{
-        height: 40%;
-        font-size: 10px;
-
-
-        .redLine{
-          content: '';
-          width: 80%;
-          background: red;
-          height: 2px;
-          position: relative;
-          top: 70%;
-        }
-      }
-    }
-    .right{
-      width: 25%;
-      height:100%;
-      display: flex;
-      justify-content: center;
-      .kmbLogo{
-        position: relative;
-        width: 100%;
-
       }
     }
 
     
-  
   }
 
 
 
-  .secondLayer{
-    width: 100%;
-    height: 35%;
-    background: #fecccb;
-    .mainContainer {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-  
-      .font {
-        word-wrap: break-word;
-        color:black;
-        font-size:70px;
-      }
-      .font2 {
-        word-wrap: break-word;
-        color:black;
-        font-size:50px;
-      }
-
-      .font3{
-        word-wrap: break-word;
-        color:black;
-        font-size:25px;
-      }
-
-    }
-  }
-
-
-  .thirdLayer{
+  .buttonSet {
+    position: absolute;
+    right: -65px;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 60%;
+    font-size: 13px;
 
 
-    .raw{
+
+    .editButton{
+      height: 50px;
+      width: 50px;
+
+      border-radius: 50%;
+      background: #42b648;
+      color: white;
       display: flex;
-      width: 100%;
-      height: 100%;
-      border-bottom: 0.5px solid black;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
 
-      .left{
-        width: 30%;
-        background: #cdffcc;
-        font-size: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+      position: absolute;
+      opacity: 0;
+      left: -125px;
 
-        div:nth-child(2){
-          font-size: 12px;
-        }
+
+      transition: .2s;
+      transition-delay: .2s;
+
+      &.active{
+        opacity: 1;
+        left: -50px;
       }
-      .right{
-        width: 70%;
-        background: white;
-<<<<<<< Updated upstream
-        font-size:25px;
-        display: flex;
-        align-items: center;
-=======
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size:20px;
 
-        a{
-          font-size: 15px;
-        }
 
-        // .dateTime{
-        //   font-size:20px;
-        // }
->>>>>>> Stashed changes
+      &:hover{
+        transform: scale(1.3);
       }
     }
   }
-
-
-    
-    
-
-  
 }
 
+@media only screen and (max-width: 768px) {
+  .noticeLogo {
+    font-size: 15px;
+  }
 }
