--- a/src/component/Loading/Loading.scss
+++ b/src/component/Loading/Loading.scss
@@ -1,7 +1,36 @@
 .imgContainer{
     width: 100%;
-    height: 100%;
+    height: 90vh;
     display:flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+
+
+    img{
+        width: 150px;
+        margin-bottom: 15px;
+    }
+
+
+    .loadingText{
+        display:flex;
+        div{
+            animation: loadingAnimation .7s infinite alternate;
+            margin-right:5px;
+            @for $i from 1 through 13 {
+                &:nth-child(#{$i}){
+                    animation-delay: #{$i*.1s};
+                }
+            }
+        }
+    }
+
+
+
+
+    @keyframes loadingAnimation {
+        0% { transform: scale(1) }
+        100%{ transform: scale(1.3)  }
+    }
 }
