--- a/src/component/ListData/listData.scss
+++ b/src/component/ListData/listData.scss
@@ -1,3 +1,11 @@
+.centerStyle{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  
+}
+
+
 .cardContainer {
   padding: 10px;
   width: 18rem;
