--- a/src/component/ListData/listData.scss
+++ b/src/component/ListData/listData.scss
@@ -1,3 +1,12 @@
+.light-mode{
+  border-top: 1px solid black
+}
+
+.dark-mode{
+  border-top: 1px solid white
+}
+
+
 .centerStyle{
   display: flex;
   justify-content: center;
