--- a/src/component/DataSetting/DataSetting.scss
+++ b/src/component/DataSetting/DataSetting.scss
@@ -1,3 +1,32 @@
+.main-container-ds{
+  width: 100%;
+  height: 90vh;
+.sub-container-ds{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+
+  .delete-button {
+    margin-right: 15px;
+    background: #dc3545;
+    color: #ffffff;
+    border-color: #dc3545;
+    border-radius: 10px;
+    height: 50px;
+    width: 100px;
+    transition: 0.2s;
+    &:hover {
+      background-color: #c82333;
+      border-color: #bd2130;
+      transition: 0.2s;
+    }
+  }
+}
+
+  
+}
+
 .dzu-dropzone {
   height: 300px;
   width: 80% !important;
