style: lighe mode css update

--- a/src/component/MainContainer/mainContainer.scss
+++ b/src/component/MainContainer/mainContainer.scss
@@ -1,6 +1,9 @@
 .inputCon{
     display: flex;
     justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 100px;
 }
 
 
@@ -34,3 +37,9 @@
     position: absolute;
 }
 
+
+.google-map-container{
+    width: 80%;
+    display:flex;
+    flex-direction: column;
+}
