--- a/src/App.scss
+++ b/src/App.scss
@@ -61,6 +61,7 @@
   padding: 25px 0 0 0;
   overflow: 'scroll';
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   // margin:0 35px;
